--- a/TSAR/Views/Consultants/Create.cshtml
+++ b/TSAR/Views/Consultants/Create.cshtml
@@ -109,7 +109,7 @@
             </div>
         </div>*@
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div align="center">
                 @Html.LabelFor(model => model.ConsultantType, htmlAttributes: new { @class = "control-label" })
             </div>
@@ -117,7 +117,27 @@
                     @Html.EditorFor(model => model.ConsultantType, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ConsultantType, "", new { @class = "text-danger" })
                 </div>
+            </div>*@
+        
+        <div class="form-group">
+            <div align="center">
+                @Html.LabelFor(model => model.ConsultantType, htmlAttributes: new { @class = "control-label" })
             </div>
+            <div class="col-md-4 col-md-offset-4">
+                @*@Html.EditorFor(model => model.ConsultantType, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ConsultantType, "", new { @class = "text-danger" })*@
+                @Html.DropDownList("ConsultantType", new List<SelectListItem>
+                {
+                    new SelectListItem{ Text="Finance", Value = "Finance"},
+                    new SelectListItem{ Text="Support", Value = "Support" },
+                    new SelectListItem{ Text="Developer", Value = "Developer" },
+                    new SelectListItem{ Text="Trainee", Value = "Trainee" },
+                    new SelectListItem{ Text="Temporary", Value = "Temporary" },
+                    new SelectListItem{ Text="Implementor", Value = "Implementor" }
+
+                },htmlAttributes: new {@class="dropdown form-control"})                                            
+            </div>
+        </div>
 
         
         <div class="form-group">
